syntax = "proto3";

package product;

service ProductService {
  rpc GetAll (PaginationRequest) returns (stream Product) {}
  rpc Get (ProductRequestId) returns (Product) {}
  rpc Insert (Product) returns (Product) {}
  rpc Update (Product) returns (Product) {}
}

message Empty {}

message Product {
  string id = 1;
  string name = 2;
  string branch = 3;
  string color = 4;
  int32 price = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message ProductRequestId {
  string id = 1;
}

message PaginationRequest {
  int32 page = 1;
  int32 perPage = 2;
}
